--- a/config.json.example
+++ b/config.json.example
@@ -1,5 +1,5 @@
 {
   "prefix":"-=",
-  "token":"faSDasdASe.asGDfe-this.is-aVdf-not.a-EtaSt-ToKen-adfd",
-  "owners":["156859037890117632"]
+  "token":"NjcxMTM0NTA4NDI2NDYxMjAz.Xi4g9g.HY3HuYGAeqo27Zgr4ER40auv0c0",
+  "owners":["311954822893142016"]
 }
